fixed word spacing

--- a/styles/ocu/_ocu-page.scss
+++ b/styles/ocu/_ocu-page.scss
@@ -103,15 +103,6 @@
                         z-index: -1;
                     }
                 }
-                .only{
-                    letter-spacing: 0px;
-                    margin-right: 10px;
-                    font-size: 3em;
-                    padding-bottom: 10px;
-                    @media screen and (max-width: 1200px) {
-                        font-size: 1.8125em;
-                    }
-                }
                 .current-price{
                     font-size: 4em;
                     letter-spacing: 0px;
@@ -134,6 +125,7 @@
                     font-size: 1.25em;
                     padding: 0;
                     padding-bottom: 16px;
+                    
                 }
 
                 span{
@@ -304,6 +296,7 @@
         @media screen and (max-width: 1200px) {
             font-size: 1.3125em;
             padding-bottom: 13px;
+            word-spacing: -3px;
         }
 
     }
@@ -323,6 +316,7 @@
             padding: 0 40px;
             margin-top: 18.8px;
             margin-bottom: 15px;
+            word-spacing: -3px;
         }
 
         @media screen and (max-width: 410px) {
